# afora-vehicle-counter-rs

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: feature_validation.rs  main.rs
src/core/: afora_error.rs  mod.rs
src/features/: mod.rs
src/features/detector/: mod.rs
src/features/detector/adapters/: mod.rs
src/features/detector/application/: detector.rs  helpers.rs  mod.rs
src/features/detector/domain/: detection.rs  mod.rs  preprocess_fallback.rs
src/features/detector/ports/: inference_runtime.rs  mod.rs  model_pipeline.rs  postprocessor.rs  preprocessor.rs  tensor_base.rs  tensor_input.rs  tensor_output.rs
src/features/media_source/: media_source_factory.rs  mod.rs
src/features/media_source/adapters/: image_source.rs  mod.rs  video_source.rs
src/features/media_source/domain/: frame_source.rs  mod.rs
src/features/pipeline/: mod.rs  pipeline_builder.rs  pipeline_factory.rs
src/features/pipeline/adapters/: mod.rs  multithreaded_pipeline.rs  sequential_pipeline.rs  threated_subscriber_broadcaster.rs
src/features/pipeline/domain/: mod.rs  pipeline_config.rs
src/features/pipeline/ports/: mod.rs  pipeline.rs  subscriber_broadcast.rs
src/features/tracker/: mod.rs  tracker_factory.rs
src/features/tracker/adapters/: mod.rs  oc_sort_tracker.rs
src/features/tracking_suscribers/: mod.rs  tracking_subscriber_factory.rs
src/features/writter/: mod.rs
src/shared/: debug.rs  mod.rs  stacktrace.rs
src/shared/domain/: frame.rs  mod.rs  overlay.rs
src/shared/utilities/: get_video_props.rs  letterbox_transform.rs  mod.rs
(+37 files in other folders)
