[package]
name = "afora_vc"
version = "0.1.0"
edition = "2024"

[features]
default = ["cuda", "yolo11"]

cuda = []
rk3588 = []

ppyoloe = []
yolo11 = []
rtdetr = []
rfdetr = []

[dependencies]
ort = { version = "=2.0.0-rc.10", features = ["cuda"] }
image = "=0.25.10"
imageproc = "0.25"
trackforge = "0.3.0"
ab_glyph = "0.2.32"
ffmpeg-next = "8.1.0"
flume = "0.12.0"
indicatif = "0.18.6"
fast_image_resize = "6"
rayon = "1"